--- a/index.html
+++ b/index.html
@@ -50,7 +50,12 @@
                         <div class="des-title">
                             <a href="./svg/svg.html">2. SVG</a>
                         </div>
-                        <div class="des-content"></div>
+                        <div class="des-content">
+                            <p>
+                                This project aims to create an categorically and aesthetically related SVG icon system using plain code and illustration software. <br> <br>
+                                The idea comes from my dream of having an apartment with rooms in my sense of design. Although the icons are simple in their shapes, but they capture the key of each room. Thus, I think they are descriptive enough, and also adorable enough.<br>
+                            </p>
+                        </div>
                     </div>
                     
                     <div class="preview"><a href="./svg/svg.html"><img src="./static/hw2.png" onerror=this.src="./static/placeholder.jpg"></a></div>
