--- a/index.html
+++ b/index.html
@@ -66,10 +66,15 @@
                         <div class="des-title">
                             <a href="./css_animation/css_animation.html">3. CSS Animation</a>
                         </div>
-                        <div class="des-content"></div>
+                        <div class="des-content">
+                            <p>
+                                This project aims to use CSS transforms to make a three-dimensional drawing and CSS animation to set it in motion. <br> <br>
+                                The idea comes from a game that I used to play, the Sims. They have this iconic rotating 3d diamond shape in many parts of the game. I further abstract it by using only half of the original shapes to make it a bit more vacant<br>
+                            </p>
+                        </div>
                     </div>
 
-                    <div class="preview"><a href="./css_animation/css_animation.html"><img src="./static/hw3.png" onerror=this.src="./static/placeholder.jpg"></a></div>
+                    <div class="preview"><a href="./css_animation/css_animation.html"><img src="./static/hw3.gif" onerror=this.src="./static/placeholder.jpg"></a></div>
                 </div>
         
                 <div class="container">
