--- a/index.html
+++ b/index.html
@@ -82,7 +82,12 @@
                         <div class="des-title">
                             <a href="./javascript/javascript.html">4. JavaScript</a>
                         </div>
-                        <div class="des-content"></div>
+                        <div class="des-content">
+                            <p>
+                                This project aims to add more interactivity to Drawing on the Web projects and also explore another animation strategy with JavaScript.<br> <br>
+                                The idea comes from the everyday usage of the screen saver, e.g. when my computer is sleeping. The theme soda is out of my preferences for such beverage<br>
+                            </p>
+                        </div>
                     </div>
                     
                     <div class="preview"><a href="./javascript/javascript.html"><img src="./static/hw4.png" onerror=this.src="./static/placeholder.jpg"></a></div>
