--- a/javascript/javascript.html
+++ b/javascript/javascript.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript</title>
+    <title>Soda Screen Saver</title>
     <link rel="stylesheet" href="./static/javascript.css">
 </head>
 <body>
     <div class="content">
-        <div class="title-board">Lucky Vending Machine</div>
+        <div class="title-board">Create Your Soda Screen Saver</div>
         <div class="vending-machine">
-            <div class="square" id="coke"></div>
-            <div class="square" id="pepsi"></div>
-            <div class="square" id="sprite"></div>
+            <a class="square" id="coca-cola" href="./part2.html?name=coca-cola"></a>
+            <a class="square" id="pepsi" href="./part2.html?name=pepsi"></a>
+            <a class="square" id="sprite" href="./part2.html?name=sprite"></a>
         </div>
         <div class="info">
             <div><p>Your choice: <span id="name">Hover a beverage</span></p></div>
