--- a/index.html
+++ b/index.html
@@ -97,12 +97,12 @@
                 <div class="container">
                     <div class="description">
                         <div class="des-title">
-                            <a href="./web_apis/web_apis.html">5. Web APIS</a>
+                            <a href="./web_api/web_api.html">5. Web APIS</a>
                         </div>
                         <div class="des-content"></div>
                     </div>
                     
-                    <div class="preview"><a href="./web_apis/web_apis.html"><img src="./static/hw5.png" onerror=this.src="./static/placeholder.jpg"></a></div>
+                    <div class="preview"><a href="./web_api/web_api.html"><img src="./static/hw5.png" onerror=this.src="./static/placeholder.jpg"></a></div>
                 </div>
         
                 <div class="container">
