Add hw5 info to index page

--- a/index.html
+++ b/index.html
@@ -99,7 +99,12 @@
                         <div class="des-title">
                             <a href="./web_api/web_api.html">5. Web APIS</a>
                         </div>
-                        <div class="des-content"></div>
+                        <div class="des-content">
+                            <p>
+                                This project aims to research web APIs that may be useful in Drawing on the Web and sketch an example page with one of my findings. <br><br>
+                                My idea comes from the AQI index, which shows the quality of the air. It can easily be incorporated into Drawing on the Web projects, such as transition, mapping, and etc.
+                            </p>
+                        </div>
                     </div>
                     
                     <div class="preview"><a href="./web_api/web_api.html"><img src="./static/hw5.png" onerror=this.src="./static/placeholder.jpg"></a></div>
