--- a/web_api/web_api.html
+++ b/web_api/web_api.html
@@ -14,7 +14,9 @@
         <div class="introduction">
             <p>
                 &emsp; In this assignment, I choose a web api "<a href="https://rapidapi.com/weatherbit/api/air-quality/"><em>Air Quality</em></a>" by <em>Weatherbit</em>. 
-                You have to specify the latitude and longitude when querying, and the API will return you with the information that can help you assess the quality of the air in the specific area. In my case, I chose the AQI (Air Quality Index, used to describe the quality of the air) from the data. </br></br>
+                You have to specify the latitude and longitude when querying, and the API will return you with the information that can help you assess the quality of the air in the specific area. In my case, I chose the AQI (Air Quality Index, used to describe the quality of the air) from the data.
+                Besides, I use Geolocation to get the users' real location for accuracy.</br></br>
+
                 
                 &emsp; I choose this because it is similar to what we have done in projects like <a href="https://i6.cims.nyu.edu/~jc3436/380/javascript/color-field.html">Color Field</a>, where we mapped some meaningful data to display different but related elements. AQI index in itself has some advantages: 
                 it has a numeric range from 0 to 500, making it easy to map; it has the corresponding color for each of its subrange, offering explicit mapping ideas; and it is highly related to our daily life, offering implicit mapping ideas. Such mapping can be applied to color and transparency to make an experienced website. </br></br>
