update index page for hw6

--- a/index.html
+++ b/index.html
@@ -115,7 +115,12 @@
                         <div class="des-title">
                             <a href="./html_canvas/html_canvas.html">6. HTML Canvas</a>
                         </div>
-                        <div class="des-content"></div>
+                        <div class="des-content">
+                            <p>
+                                This project aims to use the HTML canvas API with a custom template to dynamically create two-dimensional raster graphics in the browser. <br><br>
+                                My idea comes from the screen saver of my computer, which can changes its color on whether it is day or night. Initially, I planned to manipulate the pixel to simulate a dark effect, but it is much more difficult than I hvae expected. Therefore, instead, I adapted a linear change to show such time pass effect.
+                            </p>
+                        </div>
                     </div>
                     
                     <div class="preview"><a href="./html_canvas/html_canvas.html"><img src="./static/hw6.png" onerror=this.src="./static/placeholder.jpg"></a></div>
