--- a/final_project/final_project.html
+++ b/final_project/final_project.html
@@ -5,12 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Final Project</title>
-    <link rel="stylesheet" href="./static/final_project.css">
 </head>
 <body>
-    <svg class="svgs" id="ghost">
-        <use href="./static/ghost.svg#svg2"></use>
-    </svg>
+    <h1><a href="./drawing_follow.html">Drawing1: follow</a></h1>
+    <h1><a href="./drawing_hide.html">Drawing2: hide</a></h1>
+    <h1><a href="./drawing_busy.html">Drawing3: busy</a></h1>
 </body>
-<script src="./static/final_project.js"></script>
 </html>
