--- a/index.html
+++ b/index.html
@@ -131,7 +131,12 @@
                         <div class="des-title">
                             <a href="./webgl/webgl.html">7. WebGL</a>
                         </div>
-                        <div class="des-content"></div>
+                        <div class="des-content">
+                            <p>
+                                This project aims to create a dual-layer drawing consisting of a two-dimensional background canvas and a three-dimensional foreground canvas. <br><br>
+                                My idea is a rocket in the space. I made the 3d object of the rocket using Blender and use WebGL to render it on the web page. Sunlight is added and the background is using canvas animation to simulate the stars in the spce.
+                            </p>
+                        </div>
                     </div>
                     
                     <div class="preview"><a href="./webgl/webgl.html"><img src="./static/hw7.png" onerror=this.src="./static/placeholder.jpg"></a></div>
