--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                         <div class="des-content"></div>
                     </div>
                     
-                    <div class="preview"><a href=”./final_project/final_project.html“><img src="./static/hw8.png" onerror=this.src="./static/placeholder.jpg"></a></div>
+                    <div class="preview"><a href="./final_project/final_project.html"><img src="./static/hw8.png" onerror=this.src="./static/placeholder.jpg"></a></div>
                 </div>
     
 
