--- a/final_project/drawing_busy.html
+++ b/final_project/drawing_busy.html
@@ -8,9 +8,12 @@
     <link rel="stylesheet" href="./static/stylesheet/drawing_busy.css">
 </head>
 <body>
-    <!-- <svg class="svgs" id="ghost">
-        <use href="./static/ghost.svg#svg2"></use>
-    </svg> -->
+    <svg class="svgs" id="green"viewBox="0 0 1500 980">
+        <use href="./static/svgs/green.svg#green"></use>
+    </svg>
+    <svg class="svgs" id="ghost"viewBox="0 0 500 980">
+        <use href="./static/svgs/ghost1.svg#svg1"></use>
+    </svg>
 </body>
 <script src="./static/js/drawing_busy.js"></script>
 </html>
