--- a/final_project/drawing_hide.html
+++ b/final_project/drawing_hide.html
@@ -8,9 +8,27 @@
     <link rel="stylesheet" href="./static/stylesheet/drawing_hide.css">
 </head>
 <body>
-    <svg class="svgs" id="ghost">
-        <use href="./static/ghost.svg#svg2"></use>
-    </svg>
+    <div class = 'background'>
+        <svg  class="svgs" id="building1"viewBox="0 0 1500 980" >
+            <use href="./static/svgs/building1.svg#building1" width="900" height='500'></use>
+        </svg>
+        <svg  class="svgs" id="building2"viewBox="0 0 1500 980" >
+            <use href="./static/svgs/building2.svg#building2" width="900" height='500'></use>
+        </svg>
+        <svg  class="svgs" id="building3"viewBox="0 0 900 1000" >
+            <use href="./static/svgs/building3'.svg#building3" width="600" height='1000'></use>
+        </svg>
+        <svg  class="svgs" id="road"viewBox="0 0 900 1000" >
+            <use href="./static/svgs/road.svg#road" width="520" height='520'></use>
+        </svg>
+        <svg  class="svgs" id="ship"viewBox="0 0 900 1000" >
+            <use href="./static/svgs/ship.svg#ship" width="520" height='520'></use>
+        </svg>
+        <svg class="svgs" id="ghost">
+            <use href="./static/svgs/ghost2.svg#ghost2" width="900" height='600'></use>
+        </svg>
+    </div>
+    
 </body>
 <script src="./static/js/drawing_hide.js"></script>
 </html>
