--- a/final_project/final_project.html
+++ b/final_project/final_project.html
@@ -5,10 +5,49 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Final Project</title>
+    <link rel="stylesheet" href="./static/stylesheet/navi.css">
 </head>
 <body>
-    <h1><a href="./drawing_follow.html">Drawing1: follow</a></h1>
-    <h1><a href="./drawing_hide.html">Drawing2: hide</a></h1>
-    <h1><a href="./drawing_busy.html">Drawing3: busy</a></h1>
+    <div id="container">
+        <div class="part">
+            <a href="./drawing_busy.html">
+                <svg  class="svgs" viewBox="0 0 300 300" >
+                    <use href="./static/svgs/jar1.svg#jar1" width="100%" height='100%'></use>
+                </svg>
+
+                <svg  class="svgs" id="ghost5" viewBox="-60 -100 180 250" >
+                    <use href="./static/svgs/ghost5.svg#ghost5" width="30%" height='30%'></use>
+                </svg>
+
+                <svg  class="svgs" id="ghost3" viewBox="-60 -100 260 230">
+                    <use href="./static/svgs/ghost3.svg#ghost3" width="30%" height='30%'></use>
+                </svg>
+                <svg  class="svgs" id="ghost4" viewBox="-60 -100 280 300">
+                    <use href="./static/svgs/ghost4.svg#ghost4" width="40%" height='40%'></use>
+                </svg>
+            </a>
+        </div>
+        <div class="part">
+            <a href="./drawing_hide.html">
+                <svg  class="svgs" viewBox="0 0 300 300" >
+                    <use href="./static/svgs/jar2.svg#jar2" width="100%" height='100%'></use>
+                </svg>
+                <svg  class="svgs" id="ghost2"viewBox="-50 0 300 300" >
+                    <use href="./static/svgs/ghost2.svg#ghost2" width="100%" height='100%'></use>
+             </svg>
+            </a>
+        </div>
+        <div class="part">
+            <a href="./drawing_follow.html">
+                <svg  class="svgs" viewBox="0 0 300 300" >
+                    <use href="./static/svgs/jar3.svg#jar3" width="100%" height='100%'></use>
+                </svg>
+                <svg  class="svgs" id="ghost1"viewBox="-105 -80 300 300" >
+                    <use href="./static/svgs/ghost1.svg#ghost1" width="60%" height='60%'></use>
+                </svg>
+            </a>
+        </div>
+    </div>
+  
 </body>
 </html>
