--- a/final_project/drawing_follow.html
+++ b/final_project/drawing_follow.html
@@ -8,12 +8,10 @@
     <link rel="stylesheet" href="./static/stylesheet/drawing_follow.css">
 </head>
 <body>
-  
-   
-    <svg class="svgs" id="tree"viewBox="0 0 1500 980">
+    <svg class="svgs" id="tree"viewBox="0 0 300 300">
         <use href="./static/svgs/tree.svg#tree"></use>
     </svg>
-    <svg class="svgs" id="sun"viewBox="0 0 1500 980">
+    <svg class="svgs" id="sun"viewBox="0 0 500 500">
         <use  href="./static/svgs/sun.svg#sun"></use>
     </svg>
     <svg class="svgs" id="cloud1"viewBox="0 0 1500 980">
@@ -22,8 +20,8 @@
     <svg class="svgs" id="cloud2"viewBox="0 0 1500 980">
         <use  href="./static/svgs/cloud2.svg#cloud2"></use>
     </svg>
-    <svg class="svgs" id="ghost">
-        <use href="./static/svgs/ghost1.svg#ghost1"></use>
+    <svg class="svgs" id="ghost" viewBox="0 0 300 300">
+        <use href="./static/svgs/ghost1.svg#ghost1" width="80%" height="80%"></use>
     </svg>
 </body>
 <script src="./static/js/drawing_follow.js"></script>
