--- a/final_project/drawing_follow.html
+++ b/final_project/drawing_follow.html
@@ -8,10 +8,12 @@
     <link rel="stylesheet" href="./static/stylesheet/drawing_follow.css">
 </head>
 <body>
-    <svg class="svgs" id="tree"viewBox="0 0 300 300">
+  
+   
+    <!-- <svg class="svgs" id="tree"viewBox="0 0 1500 980">
         <use href="./static/svgs/tree.svg#tree"></use>
-    </svg>
-    <svg class="svgs" id="sun"viewBox="0 0 500 500">
+    </svg> -->
+    <svg class="svgs" id="sun"viewBox="0 0 1500 980">
         <use  href="./static/svgs/sun.svg#sun"></use>
     </svg>
     <svg class="svgs" id="cloud1"viewBox="0 0 1500 980">
@@ -20,9 +22,11 @@
     <svg class="svgs" id="cloud2"viewBox="0 0 1500 980">
         <use  href="./static/svgs/cloud2.svg#cloud2"></use>
     </svg>
-    <svg class="svgs" id="ghost" viewBox="0 0 300 300">
-        <use href="./static/svgs/ghost1.svg#ghost1" width="80%" height="80%"></use>
-    </svg>
+    <!-- <img src="./static/svgs/cloud2.svg#cloud2" alt="" class="svgs" id="cloud2"> -->
+    <img src="./static/svgs/ghost1.svg" alt="" class="svgs" id="ghost">
+    <!-- <svg class="svgs" id="ghost">
+        <use href="./static/svgs/ghost1.svg#ghost1"></use>
+    </svg> -->
 </body>
 <script src="./static/js/drawing_follow.js"></script>
 </html>
