--- a/final_project/drawing_hide.html
+++ b/final_project/drawing_hide.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./static/stylesheet/drawing_hide.css">
 </head>
 <body>
-    <div class = 'background'>
+    <div class = 'wrapper'>
         <svg  class="svgs" id="building1"viewBox="0 0 1500 980" >
             <use href="./static/svgs/building1.svg#building1" width="900" height='500'></use>
         </svg>
@@ -25,7 +25,7 @@
             <use href="./static/svgs/ship.svg#ship" width="520" height='520'></use>
         </svg>
         <svg class="svgs" id="ghost">
-            <use href="./static/svgs/ghost2.svg#ghost2" width="900" height='600'></use>
+            <use href="./static/svgs/ghost2.svg#ghost2" width="300" height='300'></use>
         </svg>
     </div>
     
