--- a/final_project/final_project.html
+++ b/final_project/final_project.html
@@ -11,7 +11,7 @@
     <div id="container">
         <div class="part">
             <a href="./drawing_busy.html">
-                <svg  class="svgs" viewBox="0 0 300 300" >
+                <svg viewBox="0 0 300 300" id='jar1'>
                     <use href="./static/svgs/jar1.svg#jar1" width="100%" height='100%'></use>
                 </svg>
 
@@ -29,7 +29,7 @@
         </div>
         <div class="part">
             <a href="./drawing_hide.html">
-                <svg  class="svgs" viewBox="0 0 300 300" >
+                <svg viewBox="0 0 300 300" >
                     <use href="./static/svgs/jar2.svg#jar2" width="100%" height='100%'></use>
                 </svg>
                 <svg  class="svgs" id="ghost2"viewBox="-50 0 300 300" >
@@ -39,7 +39,7 @@
         </div>
         <div class="part">
             <a href="./drawing_follow.html">
-                <svg  class="svgs" viewBox="0 0 300 300" >
+                <svg viewBox="0 0 300 300" id= 'jar3'>
                     <use href="./static/svgs/jar3.svg#jar3" width="100%" height='100%'></use>
                 </svg>
                 <svg  class="svgs" id="ghost1" viewBox="-80 -60 300 300" >
@@ -48,6 +48,7 @@
             </a>
         </div>
     </div>
-  
+    
+    <script src="./static/js/navi.js"></script>
 </body>
 </html>
