--- a/final_project/drawing_hide.html
+++ b/final_project/drawing_hide.html
@@ -9,26 +9,51 @@
 </head>
 <body>
     <div class = 'wrapper'>
-        <svg  class="svgs" id="building1"viewBox="0 0 1500 980" >
-            <use href="./static/svgs/building1.svg#building1" width="900" height='500'></use>
+        <div class="part1">
+        <svg  class="svgs" id="building1"viewBox="0 0 90 100" >
+            <use href="./static/svgs/building1.svg#building1"></use>
         </svg>
+        </div>
+        <div class="part2">
         <svg  class="svgs" id="building2"viewBox="0 0 1500 980" >
             <use href="./static/svgs/building2.svg#building2" width="900" height='500'></use>
         </svg>
-        <svg  class="svgs" id="building3"viewBox="0 0 900 1000" >
-            <use href="./static/svgs/building3'.svg#building3" width="600" height='1000'></use>
+        </div>
+        <div class="part3">
+        <svg  class="svgs"id="building3"viewBox="0 0 1900 1000" >
+            <use href="./static/svgs/building3'.svg#building3" ></use>
         </svg>
-        <svg  class="svgs" id="road"viewBox="0 0 900 1000" >
-            <use href="./static/svgs/road.svg#road" width="520" height='520'></use>
+        </div>
+        <div class="part4">
+        <svg  class="svgs" id="tree1" viewBox="0 0 300 300" >
+            <use href="./static/svgs/tree2.svg#tree2" ></use>
         </svg>
-        <svg  class="svgs" id="ship"viewBox="0 0 900 1000" >
-            <use href="./static/svgs/ship.svg#ship" width="520" height='520'></use>
+        </div>
+        <div class="part5">
+        <svg  class="svgs" id="tree2"viewBox="0 0 300 300" >
+            <use href="./static/svgs/tree2.svg#tree2" ></use>
         </svg>
-        <svg class="svgs" id="ghost">
+        </div>
+        <img src="./static/svgs/ghost2.svg" alt="" class="svgs" id="ghost">
+        <!-- <svg class="svgs" id="ghost">
             <use href="./static/svgs/ghost2.svg#ghost2" width="300" height='300'></use>
+        </svg> -->
+        <div class="part6">
+        <svg  class="svgs"id="road"viewBox="0 0 900 900" >
+            <use href="./static/svgs/road1.svg#road1" ></use>
         </svg>
+        </div>
+        <div class="part7">
+        <svg  class="svgs"viewBox="0 0 1000 2500" id="ship" >
+            <use href="./static/svgs/ship.svg#ship" ></use>
+        </svg>
+        </div>
     </div>
-    
+    <!-- <svg  class="svgs" id="road"viewBox="0 0 900 1000" >
+        <use href="./static/svgs/road.svg#road" width="520" height='520'></use>
+    </svg> -->
+   
+  
 </body>
 <script src="./static/js/drawing_hide.js"></script>
 </html>
