--- a/final_project/drawing_follow.html
+++ b/final_project/drawing_follow.html
@@ -10,17 +10,17 @@
 <body>
   
    
-    <!-- <svg class="svgs" id="tree"viewBox="0 0 1500 980">
+    <svg class="svgs" id="tree"viewBox="0 0 1500 980">
         <use href="./static/svgs/tree.svg#tree"></use>
-    </svg> -->
+    </svg>
     <svg class="svgs" id="sun"viewBox="0 0 1500 980">
         <use  href="./static/svgs/sun.svg#sun"></use>
     </svg>
     <svg class="svgs" id="cloud1"viewBox="0 0 1500 980">
-        <use  href="./static/svgs/cloud1.svg#cloud1"></use>
+        <use  href="./static/svgs/cloud.svg#cloud"></use>
     </svg>
     <svg class="svgs" id="cloud2"viewBox="0 0 1500 980">
-        <use  href="./static/svgs/cloud2.svg#cloud2"></use>
+        <use  href="./static/svgs/cloud2 (1).svg#cloud2"></use>
     </svg>
     <!-- <img src="./static/svgs/cloud2.svg#cloud2" alt="" class="svgs" id="cloud2"> -->
     <img src="./static/svgs/ghost1.svg" alt="" class="svgs" id="ghost">
