update img and intro

--- a/index.html
+++ b/index.html
@@ -147,7 +147,11 @@
                         <div class="des-title">
                             <a href="./final_project/final_project.html">8. Final Project</a>
                         </div>
-                        <div class="des-content"></div>
+                        <div class="des-content">
+                            <p>
+                                Ghosts, being the symbol of the evil and the dark side of world, always appear as terrifying figures. However, its invisibility in the reality enables us to draw totally different versions in our minds. From our perspective ghosts can be very cute and human-like instead of being harmful and scary. Therefore, in this project, we are going to use the drawings to present these tiny ghosts as adorable and joyful creatures.
+                            </p>
+                        </div>
                     </div>
                     
                     <div class="preview"><a href="./final_project/final_project.html"><img src="./static/hw8.png" onerror=this.src="./static/placeholder.jpg"></a></div>
